server/error.log
[dotenv@17.2.3] injecting env (3) from .env -- tip: ⚙️  write to custom object with { processEnv: myObject }
C:\Users\victo\.gemini\antigravity\playground\solar-armstrong\server\models\Post.js:31
        const mongoose = require('mongoose');
              ^^^^^^^^

SyntaxError: Unexpected identifier 'mongoose'
    at wrapSafe (node:internal/modules/cjs/loader:1691:18)
    at Module._compile (node:internal/modules/cjs/loader:1734:20)
    at Object..js (node:internal/modules/cjs/loader:1892:10)
    at Module.load (node:internal/modules/cjs/loader:1480:32)
    at Module._load (node:internal/modules/cjs/loader:1299:12)
    at TracingChannel.traceSync (node:diagnostics_channel:328:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:245:24)
    at Module.require (node:internal/modules/cjs/loader:1503:12)
    at require (node:internal/modules/helpers:152:16)
    at Object.<anonymous> (C:\Users\victo\.gemini\antigravity\playground\solar-armstrong\server\routes\posts.js:3:14)

Node.js v25.1.0
